--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Short stories'
 - !lcsh 'Single women -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: The Transfiguration of Miss Philura
 url: http://www.gutenberg.org/ebooks/28102
